syntax = "proto3";

package demo_service;

service DemoService {
  rpc Ping (PingRequest) returns (PingResponse) {}
  rpc GetFile (FileRequest) returns (stream FileResponse) {}
  rpc SendData (stream Data) returns (EmptyResponse) {}
  rpc SubmitFile(stream FileData) returns (GenericResponse) {}
}

message FileRequest {
  string path = 1;
}

message File {
  string path = 1;
  bytes data = 2;
}

message FileMetadata {
  string path = 1;
}

message FileChunk {
  bytes data = 1;
}

enum FileError {
  NotFound = 0;
}

message FileResponse {
  oneof result {
    FileChunk chunk = 1;
    FileError error = 2;
  }
}

message FileData {
  oneof result {
    FileMetadata metadata = 1;
    FileChunk chunk = 2;
    FileError error = 3;
  }
}

message Data {
  bytes data = 1;
}

message PingRequest {
  bytes msg = 1;
}

message PingResponse {
  bytes msg = 1;
}


message EmptyResponse {}

message GenericResponse {
  bool success = 1;
  string message = 2;
}
